@@ -81,7 +81,7 @@ import org.apache.lucene.util.NamedThreadFactory;
 import org.apache.lucene.util.StringHelper;
 import org.apache.lucene.util.SuppressForbidden;
 import org.apache.lucene.util.Version;
-import org.apache.lucene.util.hnsw.TopKnnCollector;
+import org.apache.lucene.search.TopKnnCollector;
 
 /**
  * Basic tool and API to check the health of an index and write a new segments file that removes
