@@ -23,7 +23,7 @@ import org.apache.lucene.search.TopDocs;
 import org.apache.lucene.search.TopDocsCollector;
 import org.apache.lucene.search.TotalHits;
 import org.apache.lucene.util.Bits;
-import org.apache.lucene.util.hnsw.TopKnnCollector;
+import org.apache.lucene.search.TopKnnCollector;
 
 /**
  * {@code LeafReader} is an abstract class, providing an interface for accessing an index. Search of
@@ -324,6 +324,7 @@ public abstract non-sealed class LeafReader extends IndexReader {
    * @param knnCollector collector with settings for gathering the vector results.
    * @param acceptDocs {@link Bits} that represents the allowed documents to match, or {@code null}
    *     if they are all allowed to match.
+   * @lucene.experimental
    */
   public abstract void searchNearestVectors(
       String field, float[] target, KnnCollector knnCollector, Bits acceptDocs) throws IOException;
@@ -352,6 +353,7 @@ public abstract non-sealed class LeafReader extends IndexReader {
    * @param knnCollector collector with settings for gathering the vector results.
    * @param acceptDocs {@link Bits} that represents the allowed documents to match, or {@code null}
    *     if they are all allowed to match.
+   * @lucene.experimental
    */
   public abstract void searchNearestVectors(
       String field, byte[] target, KnnCollector knnCollector, Bits acceptDocs) throws IOException;
